--- a/docker/task.d/arm-gnu-toolchain/Taskfile.dist.yaml
+++ b/docker/task.d/arm-gnu-toolchain/Taskfile.dist.yaml
@@ -36,3 +36,44 @@ tasks:
       - extract-arm-none-linux-gnueabihf
       - extract-aarch64-none-linux-gnu
 
+  ext-cross-compiliing-*:
+    desc: Prepare ARM GNU Cross-Compiler
+    vars:
+      EXT_TOOLCHAIN: '{{index .MATCH 0}}'
+      TOOLCHAIN: '{{.EXT_TOOLCHAIN | replace "none-" ""}}'
+    cmds:
+      - ln -sr /usr/lib/{{.TOOLCHAIN}} /usr/lib/{{.EXT_TOOLCHAIN}}
+
+  link-crt-obj:
+    internal: true
+    requiremets:
+      vars: [CRT_OBJ, GCC_DRIVER]
+    vars:
+      GCC_FILE:
+        sh: '{{.GCC_DRIVER}} -print-file-name={{base .CRT_OBJ}}'
+    silent: true
+    cmds:
+      - echo {{base .CRT_OBJ}} ⟶ {{.GCC_FILE}}
+      - ln -fsr {{.CRT_OBJ}} {{.GCC_FILE}}
+
+  fix-ext-crt-startup-*:
+    desc: Copy crt*.o files from SYSROOT to internal gcc directory
+    vars:
+      EXT_TOOLCHAIN: '{{index .MATCH 0}}'
+      TOOLCHAIN: '{{.EXT_TOOLCHAIN | replace "none-" ""}}'
+      GCC_DRIVER: '{{.BUILD_DIR}}/arm-gnu-toolchain/{{.EXT_TOOLCHAIN}}/bin/{{.EXT_TOOLCHAIN}}-gcc'      
+      CRT_OBJS1:
+        sh: find /usr/lib/gcc-cross/{{.TOOLCHAIN}} -type f -name '*crt*.o'
+      CRT_OBJS2:
+        sh: find /usr/{{.TOOLCHAIN}}/lib -type f -name '*crt*.o'        
+    cmds:
+      - for: {var: CRT_OBJS1}
+        task: link-crt-obj
+        vars:
+          GCC_DRIVER: '{{.GCC_DRIVER}}'
+          CRT_OBJ: '{{.ITEM}}'
+      - for: {var: CRT_OBJS2}
+        task: link-crt-obj
+        vars:
+          GCC_DRIVER: '{{.GCC_DRIVER}}'
+          CRT_OBJ: '{{.ITEM}}'          
