--- a/docker/builder/rpi/Taskfile.dist.yaml
+++ b/docker/builder/rpi/Taskfile.dist.yaml
@@ -11,7 +11,7 @@ tasks:
         test "{{if .DOCKER_IMAGE_ENV_BUILD|default 0|int|ge 0}}true{{end}}" == "true"
     cmds:
       - cmd: >-
-          docker image build
+          docker buildx build
           {{if .DOCKER_IMAGE_ENV_VERBOSITY|default "auto"|eq "none"}}-q{{end}}
           {{if .DOCKER_IMAGE_ENV_BUILD|default 0|int|eq 2}}--no-cache{{end}}
           --target={{.TARGET}}
@@ -19,7 +19,7 @@ tasks:
           --build-arg CC_TARGET={{.CC_TARGET}}
           --build-arg CC_TOOLCHAIN={{.CC_TOOLCHAIN}}
           {{if .DOCKER_IMAGE_ENV_VERBOSITY|default "auto"|eq "plain"}}--progress plain{{end}}
-          -t {{.IMG_NAME}}
+          -t {{.IMG_NAME}} --load
           --iidfile {{.IID_FILE}}
           .
           {{if .DOCKER_IMAGE_ENV_VERBOSITY|default "auto"|eq "none"}}> /dev/null{{end}}
@@ -31,7 +31,7 @@ tasks:
       vars: [BASEIMG, PRESET, BRANCH, IID_FILE, CC_TARGET, CC_TOOLCHAIN, RPI_VERSION]
     cmds:
       - cmd: >-
-          docker image build
+          docker buildx build
           {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "none"}}-q{{end}}
           --no-cache
           --target=build-from-repo
@@ -56,7 +56,7 @@ tasks:
       vars: [BASEIMG, PRESET, IID_FILE, CC_TARGET, CC_TOOLCHAIN, RPI_VERSION, SOURCES_DIR]
     cmds:
       - cmd: >-
-          docker image build
+          docker buildx build
           {{if .DOCKER_IMAGE_BUILDER_VERBOSITY|default "plain"|eq "none"}}-q{{end}}
           --no-cache
           --build-context chan-quectel-src={{.SOURCES_DIR}} --target=build-from-local
