--- a/docker/ubuntu/24.04/Dockerfile
+++ b/docker/ubuntu/24.04/Dockerfile
@@ -38,7 +38,7 @@ RUN --network=none --mount=type=bind,from=dl-arm-gnu-toolchain,target=/build/dow
 FROM task-base AS base
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build/task.d/deb upgrade-and-install-pkgs -- file build-essential ca-certificates jq dpkg-dev libsqlite3-dev libssl3
+    task -d /build/task.d/deb upgrade-and-install-pkgs -- file ca-certificates jq dpkg-dev libssl3
 RUN --network=none task -d /build create-build-directory && \
     task -d /build/task.d/deb create-dotenv && \
     task -d /build chown-build-directory -- nobody:nogroup
@@ -49,7 +49,7 @@ ADD --chmod=444 https://api.github.com/repos/ninja-build/ninja/releases/latest n
 FROM base AS ninja-build
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build/task.d/deb install-pkgs -- cmake curl libgtest-dev
+    task -d /build/task.d/deb install-pkgs -- build-essential cmake curl libgtest-dev
 COPY --from=task ninja-build /build/task.d/ninja-build
 
 USER nobody:nogroup
@@ -65,7 +65,7 @@ FROM base AS asterisk-dev-cc
 ARG CC_TARGET
 
 COPY ubuntu.sources /etc/apt/sources.list.d/
-COPY sources-arm.list /etc/apt/sources.list.d/arm.list
+COPY ubuntu-arm.sources /etc/apt/sources.list.d/arm.sources
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
     task -d /build/task.d/deb install-pkgs-arch -- asterisk-dev:${CC_TARGET}
@@ -73,12 +73,15 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
 FROM base AS chan-quectel-base
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build/task.d/deb install-pkgs -- git cmake libasound2-dev
+    task -d /build/task.d/deb install-pkgs -- git cmake
 COPY --from=ninja-build --link --chown=root:root /build/install /
 COPY --from=task chan-quectel /build/task.d/chan-quectel
 COPY --from=task ubuntu /build/task.d/ubuntu
 
 FROM chan-quectel-base AS chan-quectel
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    task -d /build/task.d/deb install-pkgs -- build-essential libsqlite3-dev libasound2-dev
 RUN --network=none --mount=type=bind,from=asterisk-dev,target=/build/cache task -d /build/task.d/ubuntu asterisk-headers
 
 FROM chan-quectel-base AS chan-quectel-cc
@@ -86,11 +89,11 @@ ARG CC_TARGET
 ARG CC_TOOLCHAIN
 
 COPY ubuntu.sources /etc/apt/sources.list.d/
-COPY sources-arm.list /etc/apt/sources.list.d/arm.list
+COPY ubuntu-arm.sources /etc/apt/sources.list.d/arm.sources
 COPY dpkg-buildflags-${CC_TARGET}.env /build/buildflags.env
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build/task.d/deb install-pkgs-arch -- qemu-user-static libc6-${CC_TARGET}-cross \
+    task -d /build/task.d/deb install-pkgs-arch -- qemu-user-static libc6-dev-${CC_TARGET}-cross \
     gcc-${CC_TOOLCHAIN} g++-${CC_TOOLCHAIN} binutils-${CC_TOOLCHAIN} \
     libsqlite3-dev:${CC_TARGET} libasound2-dev:${CC_TARGET}
 RUN --network=none --mount=type=bind,from=asterisk-dev-cc,target=/build/cache task -d /build/task.d/ubuntu asterisk-headers
@@ -100,11 +103,14 @@ ARG CC_TARGET
 ARG CC_TOOLCHAIN
 
 COPY ubuntu.sources /etc/apt/sources.list.d/
-COPY sources-arm.list /etc/apt/sources.list.d/arm.list
+COPY ubuntu-arm.sources /etc/apt/sources.list.d/arm.sources
 COPY dpkg-buildflags-${CC_TARGET}.env /build/buildflags.env
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build/task.d/deb install-pkgs-arch -- qemu-user-static libc6-${CC_TARGET}-cross \
+    task -d /build/task.d/deb install-pkgs-arch -- qemu-user-static libc6-dev-${CC_TARGET}-cross libgcc-13-dev-${CC_TARGET}-cross \
     libsqlite3-dev:${CC_TARGET} libasound2-dev:${CC_TARGET}
 RUN --network=none --mount=type=bind,from=asterisk-dev-cc,target=/build/cache task -d /build/task.d/ubuntu asterisk-headers
+COPY --from=task arm-gnu-toolchain /build/task.d/arm-gnu-toolchain
 COPY --from=arm-gnu-toolchain --link --chown=root:root /build/arm-gnu-toolchain/${CC_TOOLCHAIN} /build/arm-gnu-toolchain/${CC_TOOLCHAIN}
+
+RUN --network=none task -d /build/task.d/arm-gnu-toolchain ext-cross-compiliing-${CC_TOOLCHAIN} fix-ext-crt-startup-${CC_TOOLCHAIN}
