--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -296,7 +296,11 @@ IF(BUILD_CHAN_QUECTEL_BINARY)
         ENDIF()
         SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE ${CPACK_PACKAGE_ARCHITECTURE})
         SET(CPACK_DEBIAN_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_${CPACK_PACKAGE_ARCHITECTURE}.deb")
-        SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Edmunt Pienkowsky <${CPACK_PACKAGE_CONTACT}>")
+        IF(CPACK_PACKAGE_MAINTAINER)
+            SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "${CPACK_PACKAGE_MAINTAINER} <${CPACK_PACKAGE_CONTACT}>")
+        ELSE()
+            SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "${CPACK_PACKAGE_VENDOR} <${CPACK_PACKAGE_CONTACT}>")
+        ENDIF()
         SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libasound2, libsqlite3-0, asterisk")
         SET(CPACK_DEBIAN_PACKAGE_SECTION comm)
         SET(CPACK_DEBIAN_PACKAGE_PRIORITY optional)
