cpack: Reorganize variable definitions
Move some definitions of some CPACK-related variables
from CMakePresets to CMakeLists.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -296,9 +296,15 @@ IF(BUILD_CHAN_QUECTEL_BINARY)
         IF(NOT DEFINED CPACK_PACKAGE_CONTACT)
             SET(CPACK_PACKAGE_CONTACT "roed@onet.eu")
         ENDIF()
+        SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.md")
+        SET(CPACK_SET_DESTDIR ON)
+        SET(CPACK_STRIP_FILES ON)
+        SET(CPACK_THREADS 0)
+        SET(CPACK_ARCHIVE_THREADS 0)
+        SET(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS_POLICY ">=")
 
         IF(NOT DEFINED CPACK_GENERATOR)
-            SET(CPACK_GENERATOR "TGZ;DEB")
+            SET(CPACK_GENERATOR TGZ DEB)
         ENDIF()
         SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE ${CPACK_PACKAGE_ARCHITECTURE})
         SET(CPACK_DEBIAN_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_${CPACK_PACKAGE_ARCHITECTURE}.deb")
@@ -307,6 +313,7 @@ IF(BUILD_CHAN_QUECTEL_BINARY)
         ELSE()
             SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "${CPACK_PACKAGE_VENDOR} <${CPACK_PACKAGE_CONTACT}>")
         ENDIF()
+        SET(CPACK_DEBIAN_PACKAGE_CONTROL_STRICT_PERMISSION ON)
         SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libasound2, libsqlite3-0, asterisk")
         SET(CPACK_DEBIAN_PACKAGE_SECTION comm)
         SET(CPACK_DEBIAN_PACKAGE_PRIORITY optional)
@@ -324,7 +331,7 @@ IF(BUILD_CHAN_QUECTEL_BINARY)
         SET(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA ${PROJECT_BINARY_DIR}/cpack/deb/conffiles ${PROJECT_BINARY_DIR}/cpack/deb/postinst)
 
         IF(NOT DEFINED CPACK_SOURCE_GENERATOR)
-            SET(CPACK_SOURCE_GENERATOR "TGZ")
+            SET(CPACK_SOURCE_GENERATOR TGZ)
         ENDIF()
         SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${CHAN_VER_FSTR}_src")
         SET(CPACK_SOURCE_IGNORE_FILES "/build/;/install/;/package/;/test/;/tools/;/\.vscode/;/\.git/;/\.gitignore;/\.gitattributes")
