--- a/docker/task.d/deb/Taskfile.dist.yaml
+++ b/docker/task.d/deb/Taskfile.dist.yaml
@@ -14,20 +14,26 @@ tasks:
     desc: Install specified packages (DEB)
     env:
       DEBIAN_FRONTEND: noninteractive
+      DEBIAN_PRIORITY: critical
+      DEBCONF_NONINTERACTIVE_SEEN: 'true'
+      DEBCONF_NOWARNINGS: 'yes'
     cmds:
     - cmd: apt-get -qq update -y
       silent: true
-    - apt-get -qq install -y --no-install-recommends {{.CLI_ARGS}}
+    - apt-get -qq -o Dpkg::Use-Pty=0 -o APT::Acquire::Retries=10 install -y --no-install-recommends {{.CLI_ARGS}}
 
   upgrade-and-install-pkgs:
     desc: Install specified packages (DEB)
     env:
       DEBIAN_FRONTEND: noninteractive
+      DEBIAN_PRIORITY: critical
+      DEBCONF_NONINTERACTIVE_SEEN: 'true'
+      DEBCONF_NOWARNINGS: 'yes'
     cmds:
     - cmd: apt-get -qq update -y
       silent: true
-    - apt-get -qq upgrade -y --no-install-recommends
-    - apt-get -qq install -y --no-install-recommends {{.CLI_ARGS}}
+    - apt-get -qq -o Dpkg::Use-Pty=0 -o APT::Acquire::Retries=10 upgrade -y --no-install-recommends --with-new-pkgs
+    - apt-get -qq -o Dpkg::Use-Pty=0 -o APT::Acquire::Retries=10 install -y --no-install-recommends {{.CLI_ARGS}}
 
   install-pkgs-arch:
     desc: Adds architecture and install specified packages
@@ -35,11 +41,14 @@ tasks:
       - test -n "{{.CC_TARGET}}"
     env:
       DEBIAN_FRONTEND: noninteractive
+      DEBIAN_PRIORITY: critical
+      DEBCONF_NONINTERACTIVE_SEEN: 'true'
+      DEBCONF_NOWARNINGS: 'yes'
     cmds:
     - dpkg --add-architecture {{.CC_TARGET}}
     - cmd: apt-get -qq update -y
       silent: true
-    - apt-get -qq install -y --no-install-recommends {{.CLI_ARGS}}    
+    - apt-get -qq -o Dpkg::Use-Pty=0 -o APT::Acquire::Retries=10 install -y --no-install-recommends {{.CLI_ARGS}}    
 
   create-dotenv:
     desc: Create .env file
