--- a/uac/quectel.conf
+++ b/uac/quectel.conf
@@ -44,5 +44,5 @@ initstate=start				; specified initial state of device, must be one of 'stop' 's
 ; quectel required settings
 [quectel0]
 data=/dev/ttyUSB2			; tty port for AT commands; 		no default value
-uac=yes						; Uncomment line if using UAC mode
+uac=on						; Uncomment line if using UAC mode
 alsadev=hw:Android			; Uncomment if using UAC, set device name or index as reqd
