Improve device management thread
Remove useless mutex.
Move eventfd-related functions to separate file.
Rename config properties: discovery_interval -> manager_interval, default value: 15.

--- a/etc/quectel.conf
+++ b/etc/quectel.conf
@@ -1,8 +1,8 @@
 [general]
-;interval=60				; Number of seconds between trying to connect to devices
+;interval=15				; Number of seconds between trying to connect to devices
 ;smsdb=:memory:				; /var/lib/asterisk/smsdb
 ;smsdb_backup=/var/lib/asterisk/smsdb-backup
-;csmsttl=600
+;smsttl=600
 
 [defaults]
 ;multiparty=no
