--- a/uac/quectel.conf
+++ b/uac/quectel.conf
@@ -11,7 +11,7 @@ group=0						; calling group
 ;rxgain=-1					; RX gain, range: 0–65535 or 0%-100%, -1 - use module setting
 ;txgain=-1					; TX gain, range: 0–65535 or 0%-100%, -1 - use module setting
 autodeletesms=yes			; auto delete incoming sms
-resetquectel=yes			; reset quectel during initialization with ATZ command
+resetmodem=yes				; reset modem during initialization with ATZ command
 usecallingpres=yes			; use the caller ID presentation or not
 
 callingpres=allowed_passed_screen ; set caller ID presentation
