--- a/etc/quectel.conf
+++ b/etc/quectel.conf
@@ -8,8 +8,8 @@
 ;multiparty=no
 context=incoming-mobile		; context for incoming calls
 group=0						; calling group
-;rxgain=-1					; RX gain, range: 0–65535 or 0%-100%, -1 - use module setting
-;txgain=-1					; TX gain, range: 0–65535 or 0%-100%, -1 - use module setting
+;rxgain=-1					; RX gain, range: 0-65535 or 0%-100%, -1 - use module setting
+;txgain=-1					; TX gain, range: 0-65535 or 0%-100%, -1 - use module setting
 autodeletesms=yes			; auto delete incoming sms
 resetmodem=yes				; reset modem during initialization with ATZ command
 usecallingpres=yes			; use the caller ID presentation or not
